# tdd_tutorial

./: .gitignore  README.md  main.py  pyproject.toml
tdd/: main.py
tdd/common/: input_functions.py  math_functions.py  output_functions.py
tests/: test_math_functions.py
tests/test_common/: test_input_functions.py  test_math_functions.py  test_output_functions.py
