[tool.poetry]
name = "tdd-tutorial"
version = "0.1.0"
description = ""
authors = ["Matthew Pugh <pughmds@cyram.org>"]
readme = "README.md"
packages = [{include = "tdd"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
